examples/httpd-istio-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
