examples/httpd-istio-example/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
spec:
  hosts:
  - zarf.local
  gateways:
  - istio-system/zarf-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: web-service
            port:
              number: 80
